# Novelix-Agent

./: .env.example  LICENSE  README.md  app.py  pyproject.toml
agent/: agent.py  chain.py  prompts.py  tools.py
