[tool.poetry]
name = "novelix"
version = "0.1.0"
description = "Research Idea Generation AI Agent"
authors = ["Mehrdad Ameri <mehrddameri@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
streamlit = "^1.35.0"
langchain = "^0.2.0"
openai = "^1.34.0"
tavily-python = "^0.3.3"
langchain-openai = "^0.1.8"
python-dotenv = "^1.0.1"
langchainhub = "^0.1.20"
langchain-community = "^0.2.0"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"